REVISION HISTORY
================
VERSION 3.6.0, ???

Editor:
 - Supports compiling UTF-8 translation sources. TRS file now has 2 more optional settings:
   "Encoding" that tells how to interpret this TRS text, and "GameEncoding" that hints the
   original game's codepage.
 - Added support for adding custom files into the game package. This is done by assigning
   a list of directories to "Package custom data folder" property in General Settings.
 - Added "TTF fonts height used in the game logic" property to the General Settings, that makes
   your game use real font's pixel height when arranging text and text-based UI elements,
   as opposed to the nominal font's size.
 - Added "TTF font adjustment" property to Fonts, as well as to General Settings where it serves
   as a project default for the new fonts. This property lets you choose between "no changes" and
   backward compatible TTF fixup meant to keep fonts made for AGS displayed as they were meant to.
 - Fonts now have Auto Outline Style and Auto Outline Thickness properties.
 - Fonts now have a readonly Family Name field, that lets user see the original name of a font
   they've imported (if available).
 - Added IdleDelay property to Characters that lets you set time needed to pass before IdleView
   is activated. This is equivalent to the Character.SetIdleView script function.
 - Added zoom controls for the Sprite manager.
 - Sprites may now be imported by drag'n'drop into the Sprite manager.
 - Added line numbers to the Dialog script editor.
 - Cursor's position in script is now displayed on the status bar.
 - Fixed "Use old-style custom dialog options API" was not set when importing pre-3.4.0 projects.
 - Fixed comboboxes' drop-down arrows were not painted with the right color from a color theme.

Compiler:
 - Removed 500-characters line limit.

Script API:
 - Added Object.ManualScaling and Object.Scaling.
 - Deprecated Object.IgnoreScaling (use Object.ManualScaling instead).